add changes in the architecture
